2011-11-16  Patrick Gansterer  <paroga@webkit.org>

        Unreviewed. Build fix for !ENABLE(JIT) after r100363.

        * bytecode/CodeBlock.h:

2011-11-16  Geoffrey Garen  <ggaren@apple.com>

        Rolled back in r100375 and r100385 with 32-bit build fixed.

        * dfg/DFGOperations.cpp:
        * jit/JITStubs.cpp:
        (JSC::DEFINE_STUB_FUNCTION):
        * runtime/ArgList.cpp:
        (JSC::ArgList::getSlice):
        * runtime/ArgList.h:
        * runtime/JSArray.cpp:
        (JSC::JSArray::finishCreation):
        * runtime/JSArray.h:
        (JSC::JSArray::create):
        * runtime/JSGlobalObject.h:
        (JSC::constructArray):

2011-11-16  Filip Pizlo  <fpizlo@apple.com>

        DFG global variable CSE mishandles the cross-global-object inlining corner case
        https://bugs.webkit.org/show_bug.cgi?id=72542

        Reviewed by Geoff Garen.
        
        Moved code to get the global object for a code origin into CodeBlock, so it is
        more broadly accessible. Fixed CSE to compare both the variable number, and the
        global object, before deciding to perform elimination.

        * bytecode/CodeBlock.h:
        (JSC::CodeBlock::globalObjectFor):
        * dfg/DFGAssemblyHelpers.h:
        (JSC::DFG::AssemblyHelpers::globalObjectFor):
        * dfg/DFGPropagator.cpp:
        (JSC::DFG::Propagator::globalVarLoadElimination):
        (JSC::DFG::Propagator::performNodeCSE):

2011-11-16  Michael Saboff  <msaboff@apple.com>

        Enable 8 Bit Strings in JavaScriptCore
        https://bugs.webkit.org/show_bug.cgi?id=71337

        This patch turns on 8 bit strings in StringImpl and enables
        their use in JavaScriptCore. Some of the changes are to
        turn on code that had been staged (Lexer.cpp, Identifier.cpp,
        SmallStrings.cpp and some of StringImpl.{h,cpp}).
        Other changes are minor fixes to make 8 bit strings work
        (UString.h, StringImpl::getData16SlowCase()).