@@ -997,6 +997,7 @@ namespace JSC {
         
         static ptrdiff_t offsetOfSpeculativeSuccessCounter() { return OBJECT_OFFSETOF(CodeBlock, m_speculativeSuccessCounter); }
         static ptrdiff_t offsetOfSpeculativeFailCounter() { return OBJECT_OFFSETOF(CodeBlock, m_speculativeFailCounter); }
+
 #if ENABLE(JIT)
         // The number of failures that triggers the use of the ratio.
         unsigned largeFailCountThreshold() { return Heuristics::largeFailCountThresholdBase << baselineVersion()->reoptimizationRetryCounter(); }
@@ -1012,6 +1013,7 @@ namespace JSC {
             return Heuristics::desiredSpeculativeSuccessFailRatio * speculativeFailCounter() >= speculativeSuccessCounter() && speculativeFailCounter() >= largeFailCountThresholdForLoop();
         }
 #endif
+
 #if ENABLE(VALUE_PROFILER)
         bool shouldOptimizeNow();
 #else
